# C_Programming_BCA_2023

./: CMakeLists.txt  P16_Escape Sequence.c  P17_Increment and Decrement.c  P18_Prime or not.c  P20_Celcius to Fahrenheit.c  P21_Nested Loop.c  P22_Print an array with loop.c  P23_swap values of two variables.c  P24_Bubble Sorting.c  P25_Struct.c  P26_Typedef.c  P27_Array of Struct.c  P28_Enum.c  P29_Switch Case.c  P30_While Loop.c
