cmake_minimum_required(VERSION 3.26)
project(C_PROGRAMMING_LAB C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(C_PROGRAMMING_LAB
#        "P30_While Loop.c"
        #        "P29_Switch Case.c"
        #        P28_Enum.c
        #        "P27_Array of Struct.c"
        #        P26_Typedef.c
        #        P25_Struct.c
#                "P24_Bubble Sorting.c"
        #        "P23_swap values of two variables.c"
        #        "P22_Print an array with loop.c"
        #        "P21_Nested Loop.c"
        #        "P20_Celcius to Fahrenheit.c"
        #        "P19_Amicable number.c"
        #        "P18_Prime or not.c"
        #        "P17_Increment and Decrement.c"
        #        "P16_Escape Sequence.c"
        #        "P15.4_Shift Operators.c"
        #        "P15.3_Logical Operators.c"
        #        "P15.2_Bitwise Operators.c"
        #        "P15.1_Relational Operators.c"
        #        "P14_Right angled Triangle.c"
        #        "P13_Algebraic Identities.c"
        #        "P1_Hello World.c"
#        "P2_Arithmetic Operations.c"
#        "P3_Arithmetic Operation.c"
#        P4_Swapping.c
#        P5_Swapping.c
#        "P6_Odd or Even.c"
#        "P7_Alphabet or not.c"
#        "P8_ASCII value.c"
#        P9_Discriminant.c
#        "P10_Currency Converter.c"
#        "P11.1_Area of Square.c"
#        "P11.2_Area of Triangle.c"
#        "P11.3_Area of Rectangle.c"
#        "P11.4_Area of Circle.c"
#        "P11.5_Area of Hexagon.c"
#        "P11.6_Area of Trapezium.c"
#        "P12_Age by years.c"
)
